Replace Arrays.asList with List.of in most places.