@@ -29,7 +29,7 @@ class ArrayDecoderTest {
     void setup() throws GestaltConfigurationException {
         configNodeService = Mockito.mock(ConfigNodeService.class);
         lexer = Mockito.mock(SentenceLexer.class);
-        decoderService = new DecoderRegistry(Arrays.asList(doubleDecoder, stringDecoder, listDecoder), configNodeService, lexer,
+        decoderService = new DecoderRegistry(List.of(doubleDecoder, stringDecoder, listDecoder), configNodeService, lexer,
             List.of(new StandardPathMapper()));
     }
 
@@ -90,7 +90,7 @@ class ArrayDecoderTest {
         arrayNode[1] = new LeafNode("Steve");
         arrayNode[2] = new LeafNode("Matt");
 
-        ConfigNode nodes = new ArrayNode(Arrays.asList(arrayNode));
+        ConfigNode nodes = new ArrayNode(List.of(arrayNode));
         ArrayDecoder decoder = new ArrayDecoder();
 
         ValidateOf<Object[]> values = decoder.decode("db.hosts", nodes, TypeCapture.of(String[].class), decoderService);
@@ -114,7 +114,7 @@ class ArrayDecoderTest {
         arrayNode[1] = new LeafNode("0.222");
         arrayNode[2] = new LeafNode("0.33");
 
-        ConfigNode nodes = new ArrayNode(Arrays.asList(arrayNode));
+        ConfigNode nodes = new ArrayNode(List.of(arrayNode));
         ArrayDecoder decoder = new ArrayDecoder();
 
         ValidateOf<Object[]> values = decoder.decode("db.hosts", nodes, TypeCapture.of(Double[].class), decoderService);
