@@ -20,7 +20,6 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -55,7 +54,7 @@ class EnvironmentLoaderTest {
         Mockito.when(lexer.scan("test"))
             .thenReturn(ValidateOf.valid(Collections.singletonList(new ObjectToken("test"))));
         Mockito.when(lexer.scan("db.name"))
-            .thenReturn(ValidateOf.valid(Arrays.asList(new ObjectToken("db"), new ObjectToken("name"))));
+            .thenReturn(ValidateOf.valid(List.of(new ObjectToken("db"), new ObjectToken("name"))));
 
         // mock the source so we return our test data stream.
         Mockito.when(source.hasList()).thenReturn(true);
@@ -115,7 +114,7 @@ class EnvironmentLoaderTest {
         Mockito.when(lexer.scan("test"))
                .thenReturn(ValidateOf.valid(Collections.singletonList(new ObjectToken("test"))));
         Mockito.when(lexer.scan("db.name"))
-               .thenReturn(ValidateOf.valid(Arrays.asList(new ObjectToken("db"), new ObjectToken("name"))));
+               .thenReturn(ValidateOf.valid(List.of(new ObjectToken("db"), new ObjectToken("name"))));
 
         // mock the source so we return our test data stream.
         Mockito.when(source.hasList()).thenReturn(true);
@@ -178,7 +177,7 @@ class EnvironmentLoaderTest {
             .thenReturn(ValidateOf.valid(Collections.singletonList(new ObjectToken("test"))));
         Mockito.when(lexer.scan("db.name"))
             .thenReturn(ValidateOf.inValid(
-                Arrays.asList(new ValidationError.FailedToTokenizeElement("name", "db.name"),
+                List.of(new ValidationError.FailedToTokenizeElement("name", "db.name"),
                     new ValidationError.EmptyPath())));
 
         // mock the source so we return our test data stream.
@@ -230,7 +229,7 @@ class EnvironmentLoaderTest {
             .thenReturn(ValidateOf.valid(Collections.singletonList(new ObjectToken("test"))));
         Mockito.when(lexer.scan("db.name"))
             .thenReturn(ValidateOf.inValid(
-                Arrays.asList(new ValidationError.FailedToTokenizeElement("name", "db.name"),
+                List.of(new ValidationError.FailedToTokenizeElement("name", "db.name"),
                     new ValidationError.EmptyPath())));
 
         // mock the source so we return our test data stream.
@@ -290,7 +289,7 @@ class EnvironmentLoaderTest {
         Mockito.when(lexer.scan("test"))
             .thenReturn(ValidateOf.inValid(new ValidationError.EmptyPath()));
         Mockito.when(lexer.scan("db.name"))
-            .thenReturn(ValidateOf.valid(Arrays.asList(new ObjectToken("db"), new ObjectToken("name"))));
+            .thenReturn(ValidateOf.valid(List.of(new ObjectToken("db"), new ObjectToken("name"))));
 
         // mock the source so we return our test data stream.
         Mockito.when(source.hasList()).thenReturn(true);
